--- a/style.css
+++ b/style.css
@@ -161,10 +161,12 @@ header {
   width: 1000px;
   height: 800px;
   margin: auto;
+  position: fixed;
 }
 
 .sec02__video {
   width: 900px;
   height: 600px;
   margin: auto;
+  position: fixed;
 }
