--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html {
 body {
   box-sizing: border-box;
   font-family: century gothic;
-  background: black;
-  color: #fff;
+  background: 7b1113;
+  color: #7b1113;
 }
 
 img {
@@ -23,7 +23,7 @@ img {
 
 a {
   text-decoration: none;
-  color: #fff;
+  color: #FFFFFF;
 }
 
 ul {
