--- a/style.css
+++ b/style.css
@@ -53,8 +53,8 @@ header {
 .nav__link {
   display: block;
   padding: 40px;
-  background-color: #eee;
-  color: #000;
+  background-color: ##FFFFFF;
+  color: ##FFFFFF;
   width: 100%;
   text-align: center;
   font-size: 20px;
@@ -73,8 +73,8 @@ header {
 .secTitle {
   text-align: center;
   padding: 20px;
-  background-color: #eee;
-  color: #000;
+  background-color: ##FFFFFF;
+  color: ##FFFFFF;
 }
 
 .sec01 {
