--- a/style.css
+++ b/style.css
@@ -21,6 +21,14 @@ img {
 
 }
 
+text {
+font-family: century gothic
+ background: none;
+  color: #FFFFFF;
+  
+
+}
+
 a {
   text-decoration: none;
   color: #FFFFFF;
