--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html {
 body {
   box-sizing: border-box;
   font-family: century gothic;
-  background: 7b1113;
-  color: #7b1113;
+  background: #7b1113;
+  color: #FFFFFF;
 }
 
 img {
@@ -31,7 +31,7 @@ font-family: century gothic
 
 a {
   text-decoration: none;
-  color: #FFFFFF;
+  color: #000000;
 }
 
 ul {
@@ -61,8 +61,8 @@ header {
 .nav__link {
   display: block;
   padding: 40px;
-  background-color: ##FFFFFF;
-  color: ##FFFFFF;
+  background-color: #000000;
+  color: #FFFFFF;
   width: 100%;
   text-align: center;
   font-size: 20px;
@@ -81,8 +81,8 @@ header {
 .secTitle {
   text-align: center;
   padding: 20px;
-  background-color: ##FFFFFF;
-  color: ##FFFFFF;
+  background-color: #000000;
+  color: #FFFFFF;
 }
 
 .sec01 {
