--- a/style.css
+++ b/style.css
@@ -9,8 +9,8 @@ html {
 body {
   box-sizing: border-box;
   font-family: century gothic;
-  background: #7b1113;
-  color: #FFFFFF;
+  background: black;
+  color: #fff;
 }
 
 img {
@@ -21,17 +21,9 @@ img {
 
 }
 
-text {
-font-family: century gothic
- background: none;
-  color: #FFFFFF;
-  
-
-}
-
 a {
   text-decoration: none;
-  color: #000000;
+  color: #fff;
 }
 
 ul {
@@ -61,8 +53,8 @@ header {
 .nav__link {
   display: block;
   padding: 40px;
-  background-color: #000000;
-  color: #FFFFFF;
+  background-color: #eee;
+  color: #000;
   width: 100%;
   text-align: center;
   font-size: 20px;
@@ -70,7 +62,7 @@ header {
 }
 
 .nav__link:hover {
-  opacity: 1;
+  opacity: 0.7;
 }
 
 .siteTitle {
@@ -81,8 +73,8 @@ header {
 .secTitle {
   text-align: center;
   padding: 20px;
-  background-color: #000000;
-  color: #FFFFFF;
+  background-color: #eee;
+  color: #000;
 }
 
 .sec01 {
